  promise. This is a more modern alternative for the ``callback``
  argument. To track whether a view is done rendering you can hook in
  with ``.done``. The ``callback`` argument has been removed, breaking
  backwards compatibility. You can rewrite::

    $(el).render(obj, function() { this.el });

  to this::

    $(el).render(obj).done(function(view) { view.el });

* Backwards compatibility: previously when you implemented ``render`` in
  a view, it could optionally receive a number of arguments ``(el, obj, name,
  callback, errback)``. ``callback`` and ``errback`` have been removed. 
  ``el``, ``obj`` and ``name`` have been available already on ``this``,
  and these are the preferred way to access them.

  This change also affects the ``cleanup`` method; if you implement it, it
  will not receive the ``el, obj, name`` arguments anymore.

* Unfortunately ``<element>``, ``<attribute>`` and ``<block>`` did not
  work well in IE. Instead you can now use ``data-el``, ``data-attr``
  and ``data-unwrap`` on any DOM element.

* Introduce ``data-handler`` directive to hook up events directly from
  template. With Obviel, this will hook up events to view directly.

* The template constructor now accepts templates that consist of
  multiple elements on top ("<p>first</p><p>second</p>"). It also
  accepts templates that are a piece of text and an element following
  ("text<p>following</p>") or are an element followed by a piece of
  text ("<p>first</p>followed").

* Templates can be inlined in a ``<compilerName>Script`` section 
  in the HTML document.
 
* Fix a bug in ``data-id`` generation where ``data-id="not_a_variable"``
  wasn't correctly handled.

* Change Obviel to be compatible with jQuery 1.7.2. There were two issues:
 
  * Obviel relied on document-level event handlers to be triggered
    even for disconnected events.

  * Obviel Forms used a cargo-culted pattern for sending 'change'
    events; replaced this with shorter el.trigger('change').
